初步更新swag
