# biz/handler/ping.go
@@ -8,7 +8,13 @@ import (
 	"github.com/cloudwego/hertz/pkg/protocol/consts"
 )
 
-// Ping return pong to test network
+// Ping 测试网络接口
+// @Tags 测试
+// @Summary 测试网络接口
+// @Description 测试网络接口
+// @Accept application/json
+// @Produce application/json
+// @Router /ping [get]
 func Ping(ctx context.Context, c *app.RequestContext) {
 	c.JSON(consts.StatusOK, utils.H{
 		"msg": "pong",
